--- a/00.ipynb
+++ b/00.ipynb
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +995,7 @@
        "[0.009993918530503909, 0.014446876482462567, 0.018639592269729333]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1232,7 @@
        "279"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1263,7 @@
        "2"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1768,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1962,7 +1962,7 @@
        "2017-12-22 11:00:00     0    4  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1983,7 +1983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1997,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2007,7 +2007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2094,7 +2094,7 @@
        "2017-12-22 11:00:00  10.14  10.06    0     1"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2105,7 +2105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2114,7 +2114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2144,7 +2144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2154,14 +2154,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 6.02 ms\n"
+      "Wall time: 11 ms\n"
      ]
     }
    ],
@@ -2180,7 +2180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2189,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2198,7 +2198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2277,7 +2277,7 @@
        "4  10.08   9.98 -1.0    5"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2295,7 +2295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2304,7 +2304,7 @@
        "array([10.14, 10.12,  2.  ,  2.  ,  0.  ])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2321,7 +2321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2374,7 +2374,7 @@
        "0  10.14  10.12  0.0    0       2       2      0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2385,7 +2385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2395,7 +2395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2406,7 +2406,7 @@
        "       [10.16, 10.09]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2418,7 +2418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2439,7 +2439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2485,14 +2485,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 2.01 ms\n"
+      "Wall time: 2 ms\n"
      ]
     }
    ],
@@ -2506,7 +2506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2534,7 +2534,7 @@
        " [10.02, 1, 480.0]]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2558,16 +2558,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class N(object):\n",
-    "    def __init__(self,point1,point2,LvP):\n",
+    "class stFlag(object):\n",
+    "    def __init__(self,point1,point2):\n",
     "        self.drt = point1[1]\n",
-    "        self.P_S = p1\n",
-    "        self.C_Htm = p2[2]\n",
-    "        self.C_H = p2[0]\n",
-    "        self.C_Ltm = None\n",
-    "        self.C_L = None\n",
-    "        self.lastLvP = LvP\n",
-    "        self.ismain = None # TBD\n",
+    "        self.stTmS = point1[2]\n",
+    "        self.stTmE = point2[2]\n",
+    "        self.destroyV = point1[0]\n",
+    "        self.rangeV = point2[0]\n",
+    "        self.ctTmS = self.stTmE\n",
+    "        self.ctTmE = None\n",
+    "        if self.drt == 1:   # Upward Flag\n",
+    "            self.ctH = point2[0]\n",
+    "            self.ctL = None\n",
+    "        else:\n",
+    "            self.ctL = point2[0]\n",
+    "            self.ctH = None\n",
+    "        self.list_P = [point1,point2]\n",
+    "        self.status = 'st'  #'st','center'\n",
+    "    \n",
+    "    def update(self,point):\n",
+    "        '''\n",
+    "        point.drt == self.drt:\n",
+    "            if in_St: is_Destroy? \n",
+    "            else: is_newFlag(p3)?  return flag_idx\n",
+    "            else: updateCt\n",
+    "        point.drt <> self.drt:\n",
+    "            if in_St: is Destroy?\n",
+    "            else: \n",
+    "        '''\n",
+    "        # Destroy, point.drt == self.drt\n",
+    "        if self.status == 'st':\n",
+    "            pass\n",
+    "        elif self.status == 'ct':\n",
+    "            pass\n",
+    "        \n",
+    "        # New stFlag, point.drt <> self.drt\n",
+    "        \n",
+    "        # UpdateCt\n",
+    "    \n",
+    "    def updateCt(self,point):\n",
+    "        self.ctTmE = point[2]\n",
+    "        if self.drt == 1:   # Upward Flag\n",
+    "            self.ctL = point[0]\n",
+    "        else:\n",
+    "            self.ctH = point[0]\n",
+    "        self.list_P.append(point)\n",
+    "        self.status = 'ct'\n",
+    "        return True\n",
+    "    \n",
+    "            \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class levelZip(object):\n",
+    "    def __init__(self,point1,point2,LvP):\n",
+    "        self.list_Lv = [point1]\n",
+    "        self.dict_sg = [point1[2]]\n",
+    "        self.dict_flg = [self.newFlag()]\n",
+    "        \n",
+    "    def newFlag(self,point1,point2):\n",
+    "        return stFlag(point1,point2)\n",
     "        \n",
     "    def update(self,point):\n",
     "        if self.drt == 1:\n",
@@ -2577,6 +2633,19 @@
     "        else:\n",
     "            pass\n",
     "        return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "for Lv in LvL:\n",
+    "    lv.update(p)\n",
+    "LvL.append(levelZip(p))\n",
+    "'''"
    ]
   },
   {
