--- a/00.ipynb
+++ b/00.ipynb
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
        "2017-12-22 11:00:00     0    4  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +995,7 @@
        "[0.009993918530503909, 0.014446876482462567, 0.018639592269729333]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,16 +1007,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "pandas.core.series.Series"
+       "list"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1232,7 @@
        "279"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1263,7 @@
        "2"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1768,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1962,7 +1962,7 @@
        "2017-12-22 11:00:00     0    4  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1983,7 +1983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1997,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2007,7 +2007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2094,7 +2094,7 @@
        "2017-12-22 11:00:00  10.14  10.06    0     1"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2105,7 +2105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2114,7 +2114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2144,7 +2144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2154,14 +2154,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 11 ms\n"
+      "Wall time: 7.02 ms\n"
      ]
     }
    ],
@@ -2180,7 +2180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2189,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2198,7 +2198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -2231,10 +2231,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>10.14</td>\n",
-       "      <td>10.12</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>9.66</td>\n",
+       "      <td>9.34</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>484</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2270,14 +2270,14 @@
       ],
       "text/plain": [
        "       H      L  drt  idx\n",
-       "0  10.14  10.12  0.0    0\n",
+       "0   9.66   9.34  1.0  484\n",
        "1  10.12  10.06 -1.0    2\n",
        "2  10.16  10.09  1.0    3\n",
        "3  10.14  10.06 -1.0    4\n",
        "4  10.08   9.98 -1.0    5"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2295,16 +2295,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([10.14, 10.12,  2.  ,  2.  ,  0.  ])"
+       "array([  9.66,   9.34,   2.  ,   2.  , 484.  ])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2321,7 +2321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2357,10 +2357,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>10.14</td>\n",
-       "      <td>10.12</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>9.66</td>\n",
+       "      <td>9.34</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>484</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
@@ -2370,11 +2370,11 @@
        "</div>"
       ],
       "text/plain": [
-       "       H      L  drt  idx  cnt_up  cnt_dn  nflag\n",
-       "0  10.14  10.12  0.0    0       2       2      0"
+       "      H     L  drt  idx  cnt_up  cnt_dn  nflag\n",
+       "0  9.66  9.34  1.0  484       2       2      0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2385,7 +2385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2395,18 +2395,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[10.14, 10.12],\n",
+       "array([[ 9.66,  9.34],\n",
        "       [10.12, 10.06],\n",
        "       [10.16, 10.09]])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2418,7 +2418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2439,7 +2439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2485,7 +2485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2506,7 +2506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2534,7 +2534,7 @@
        " [10.02, 1, 480.0]]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2583,8 +2583,8 @@
     "            else: is_newFlag(p3)?  return flag_idx\n",
     "            else: updateCt\n",
     "        point.drt <> self.drt:\n",
-    "            if in_St: is Destroy?\n",
-    "            else: \n",
+    "            if St/Ct: is_New?  return (p1,p2)\n",
+    "            else: updatedCt\n",
     "        '''\n",
     "        # Destroy, point.drt == self.drt\n",
     "        if self.status == 'st':\n",
@@ -2598,16 +2598,72 @@
     "    \n",
     "    def updateCt(self,point):\n",
     "        self.ctTmE = point[2]\n",
-    "        if self.drt == 1:   # Upward Flag\n",
+    "        if (self.drt == 1) & (self.status == 'st'):   \n",
     "            self.ctL = point[0]\n",
-    "        else:\n",
+    "        elif (self.drt == -1) & (self.status == 'st'):\n",
     "            self.ctH = point[0]\n",
+    "        elif (point[1] == -1):\n",
+    "            self.ctH = min(self.ctH, point[0])\n",
+    "        elif:\n",
+    "            self.ctL = max(self.ctL, point[0])\n",
+    "        else:\n",
+    "            print('sth wrong when updateCt')\n",
     "        self.list_P.append(point)\n",
     "        self.status = 'ct'\n",
     "        return True\n",
     "    \n",
-    "            \n",
+    "    def is_new(self,point):\n",
+    "        if point[0]>self.rangeV:\n",
+    "            self.status = 'closed'\n",
+    "            return False\n",
+    "        else:\n",
+    "            return True\n",
+    "        \n",
+    "    def index(self):\n",
+    "        return self.stTmS\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Segment(object):\n",
+    "\n",
+    "    def __init__(self,point1,point2):\n",
+    "        self.drt = point1[1]\n",
+    "        self.flg_cnt = 0\n",
+    "        self.list_flg = list()\n",
+    "        self.startP = point1\n",
+    "        self.endP = None\n",
+    "        #self.status = 'open'\n",
+    "        \n",
+    "    def update(self, point):\n",
+    "        '''\n",
+    "        update flg;\n",
+    "        if new flg: \n",
+    "            if new_flg.drt == last_flg.drt: \n",
+    "                append(stFlag); flg_cnt += 1; update endP;\n",
+    "                if flg_cnt > 1: return 1\n",
+    "            if new_flg.drt <> last_flg.drt: \n",
+    "                if flg_cnt == 1: reinitate segment; return 1\n",
+    "                if flg_cnt > 1: append(stFlag); flg_cnt = 1;           \n",
+    "        if flg destroy:\n",
+    "            if flg_cnt = 0: return 2 (最好将point1作为父类的属性)\n",
+    "            \n",
+    "        Return:\n",
+    "        -- 'new segment' & startP\n",
+    "        -- 'destroy'\n",
+    "        '''\n",
+    "        \n",
+    "        \n",
+    "    def index(self):\n",
+    "        return self.list_flg[0].index()\n",
+    "    \n",
+    "    def flg_cnt(self):\n",
+    "        return len(self.list_flg)-1"
    ]
   },
   {
@@ -2618,14 +2674,16 @@
    "source": [
     "class levelZip(object):\n",
     "    def __init__(self,point1,point2,LvP):\n",
+    "        self.drt = point1[1]\n",
+    "        self.list_sg = [Segment(point1,point2)]\n",
     "        self.list_Lv = [point1]\n",
-    "        self.dict_sg = [point1[2]]\n",
-    "        self.dict_flg = [self.newFlag()]\n",
-    "        \n",
-    "    def newFlag(self,point1,point2):\n",
-    "        return stFlag(point1,point2)\n",
-    "        \n",
+    "        self.status = 'open'\n",
+    "              \n",
     "    def update(self,point):\n",
+    "        '''\n",
+    "        if new segment: list_Lv.append(P)          \n",
+    "        if segment destroied: return Lv detroy  (only happend when there is no measure sg)\n",
+    "        '''\n",
     "        if self.drt == 1:\n",
     "            pass\n",
     "        elif self.drt == -1:\n",
